Update GitHub Actions workflows to use latest action versions

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,55 +12,38 @@ jobs:
   build-and-release:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      
+      - uses: actions/checkout@v4
+
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.19.0'
           channel: 'stable'
-      
+
       - name: Install dependencies
         run: flutter pub get
-      
+
       - name: Build web
         run: flutter build web --release
-      
+
       - name: Build Android APK
         run: flutter build apk --release
-      
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.event.inputs.version }}
-          release_name: Release ${{ github.event.inputs.version }}
-          draft: false
-          prerelease: false
-      
+
       - name: Zip Web Build
         run: |
           cd build
           zip -r web-build.zip web/
-      
-      - name: Upload Web Build to Release
-        uses: actions/upload-release-asset@v1
+
+      - name: Create Release and Upload Assets
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: ${{ github.event.inputs.version }}
+          name: Release ${{ github.event.inputs.version }}
+          draft: false
+          prerelease: false
+          files: |
+            ./build/web-build.zip
+            ./build/app/outputs/flutter-apk/app-release.apk
+          fail_on_unmatched_files: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./build/web-build.zip
-          asset_name: web-build.zip
-          asset_content_type: application/zip
-      
-      - name: Upload Android APK to Release
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./build/app/outputs/flutter-apk/app-release.apk
-          asset_name: daytask-${{ github.event.inputs.version }}.apk
-          asset_content_type: application/vnd.android.package-archive
