--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -23,16 +23,16 @@ jobs:
         run: flutter pub get
 
       - name: Analyze project source
-        run: flutter analyze
+        run: flutter analyze --no-fatal-warnings
 
       - name: Run tests
         run: flutter test
 
       - name: Build web
-        run: flutter build web --release
+        run: flutter build web --release --no-tree-shake-icons
 
       - name: Build Android APK
-        run: flutter build apk --release
+        run: flutter build apk --release --no-tree-shake-icons
 
       - name: Upload Web Build
         uses: actions/upload-artifact@v4
