--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,9 +46,17 @@ dependencies:
   # Utils
   intl: ^0.19.0
   uuid: ^4.3.3
+  http: ^1.1.0
 
   # Supabase
   supabase_flutter: ^2.3.4
+
+  # URL Launcher removed to fix warnings
+
+  # SVG Support
+  flutter_svg: ^2.0.10+1
+  flutter_launcher_icons: ^0.14.3
+
 
 dev_dependencies:
   flutter_test:
@@ -62,10 +70,6 @@ dev_dependencies:
   flutter_lints: ^5.0.0
 
   # App icon generator
-  flutter_launcher_icons: ^0.13.1
-
-  # Splash screen generator
-  flutter_native_splash: ^2.3.10
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -81,6 +85,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - android/app/src/main/assets/hosts
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
